# linklog-hardware

doc/: pyproject.toml
doc/doc/: firebase_upload.py  uart.py
receiver/: pyproject.toml
receiver/receiver/: __init__.py  __main__.py  gpio.py  stream.py  stub.py  witer.py  writer.py
recorder/: .env-example  pyproject.toml
recorder/recorder/: __init__.py  encoder.py  stream.py  writer.py
recorder/testdatas/: audio_data.pcm
