[tool.poetry]
name = "doc"
version = "0.1.0"
description = ""
authors = ["Rate980 <2220208@ecc.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
getch = "^1.0"
openai = "0.28"
pyserial = "^3.5"
sliplib = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
